Refactor code structure for improved readability and maintainability

--- a/auto.html
+++ b/auto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Import Auto - Trinité Import</title>
+    <title>Import Auto Prestige - Trinité Import</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
 </head>
@@ -16,6 +16,7 @@
                 <li><a href="auto.html" class="nav-link active">Pôle Auto</a></li>
                 <li><a href="spiritueux.html" class="nav-link">Spiritueux</a></li>
                 <li><a href="process.html" class="nav-link">Process</a></li>
+                <li><a href="about.html" class="nav-link">À Propos</a></li>
                 <li><a href="contact.html" class="nav-link">Contact</a></li>
             </ul></nav>
             <div class="flex" style="gap:1rem; align-items:center;">
@@ -28,37 +29,41 @@
     <section class="hero">
         <div class="container grid" style="grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); gap: 4rem; align-items: center;">
             <div class="reveal">
-                <span class="badge">IMPORTATION PREMIUM</span>
-                <h1 class="mb-2">Roulez l'esprit tranquille.</h1>
-                <p class="lead">Votre véhicule importé de France ou d'Europe, livré clé en main en Martinique. Zéro démarche administrative pour vous.</p>
+                <span class="badge">LUXE & PRESTIGE</span>
+                <h1 class="mb-2">L'exceptionnel,<br>sinon rien.</h1>
+                <p class="lead">Spécialiste de l'importation de véhicules haute gamme. Porsche, Ferrari, AMG, Range Rover... Nous livrons vos rêves en Martinique.</p>
                 <ul style="list-style: none; margin-bottom: 2.5rem; color: var(--text-main);">
-                    <li style="margin-bottom: 0.8rem">✅ <strong>Garantie 6 à 12 mois</strong> (Moteur/Boîte/Pont)</li>
-                    <li style="margin-bottom: 0.8rem">✅ <strong>Gestion administrative</strong> (Carte grise, Dédouanement)</li>
-                    <li style="margin-bottom: 0.8rem">✅ <strong>Préparation esthétique</strong> avant remise des clés</li>
+                    <li style="margin-bottom: 0.8rem">💎 <strong>Sourcing Exclusif</strong> (Réseau concessions Premium Europe)</li>
+                    <li style="margin-bottom: 0.8rem">🔒 <strong>Transport Sécurisé</strong> (Conteneur fermé uniquement)</li>
+                    <li style="margin-bottom: 0.8rem">✨ <strong>Conciergerie Auto</strong> (Détailing complet à l'arrivée)</li>
                 </ul>
             </div>
             <div class="card reveal">
-                <h3 class="mb-2">Recherche Personnalisée</h3>
+                <h3 class="mb-2">Recherche de Véhicule</h3>
                 <form>
                     <div class="form-group">
-                        <label class="form-label">Type de véhicule</label>
+                        <label class="form-label">Catégorie</label>
                         <select class="form-select">
-                            <option>Citadine</option>
-                            <option>SUV / 4x4</option>
-                            <option>Berline</option>
-                            <option>Utilitaire</option>
-                            <option>Sport / Premium</option>
+                            <option>Supercar / GT</option>
+                            <option>SUV de Luxe (X5, GLE, Range...)</option>
+                            <option>Berline Prestige</option>
+                            <option>Cabriolet Sportif</option>
+                            <option>Collection / Rare</option>
                         </select>
                     </div>
                     <div class="form-group">
-                        <label class="form-label">Budget max (€)</label>
-                        <input type="number" class="form-input" placeholder="Ex: 25000">
+                        <label class="form-label">Marque / Modèle souhaité</label>
+                        <input type="text" class="form-input" placeholder="Ex: Porsche 911 GT3">
                     </div>
                     <div class="form-group">
-                        <label class="form-label">Email de contact</label>
-                        <input type="email" class="form-input" required placeholder="vous@email.com">
+                        <label class="form-label">Budget estimé (€)</label>
+                        <input type="number" class="form-input" placeholder="Ex: 120 000">
                     </div>
-                    <button type="submit" class="btn btn-primary" style="width: 100%;">Demander un devis gratuit</button>
+                    <div class="form-group">
+                        <label class="form-label">Votre Email</label>
+                        <input type="email" class="form-input" required placeholder="client@vip.com">
+                    </div>
+                    <button type="submit" class="btn btn-primary" style="width: 100%;">Confier ma recherche</button>
                 </form>
             </div>
         </div>
@@ -66,19 +71,19 @@
 
     <section class="section">
         <div class="container">
-            <h2 class="text-center mb-2">Nos Services Inclus</h2>
+            <h2 class="text-center mb-2">Service de Haut Standing</h2>
             <div class="grid card-grid">
                 <div class="card">
-                    <h3>🔍 Sourcing & Inspection</h3>
-                    <p>Nous vérifions l'historique (Histovec), le carnet d'entretien et l'état physique via nos partenaires certifiés en métropole avant tout achat.</p>
+                    <h3>🔍 Expertise & Historique</h3>
+                    <p>Sur ce segment, l'erreur n'est pas permise. Nous analysons les entretiens (Porsche Approved, etc.) et vérifions le kilométrage certifié.</p>
                 </div>
                 <div class="card">
-                    <h3>🚢 Logistique Maritime</h3>
-                    <p>Transport sécurisé en conteneur ou navire roulier (Ro-Ro). Nous assurons le véhicule durant toute la traversée jusqu'à Fort-de-France.</p>
+                    <h3>🚢 Logistique VIP</h3>
+                    <p>Pas de navire roulier standard. Vos véhicules voyagent en conteneur sécurisé et scellé pour garantir une protection maximale.</p>
                 </div>
                 <div class="card">
-                    <h3>📄 Pack Immatriculation</h3>
-                    <p>Fini la queue à la préfecture. Nous gérons la carte grise définitive, la pose des plaques et le paiement de l'octroi de mer.</p>
+                    <h3>🔑 Clé en main</h3>
+                    <p>Dédouanement, malus écologique, immatriculation définitive. Vous récupérez votre véhicule prêt à rouler, sans démarches.</p>
                 </div>
             </div>
         </div>
