--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
                 <li><a href="auto.html" class="nav-link">Pôle Auto</a></li>
                 <li><a href="spiritueux.html" class="nav-link">Spiritueux</a></li>
                 <li><a href="process.html" class="nav-link">Process</a></li>
+                <li><a href="about.html" class="nav-link">À Propos</a></li>
                 <li><a href="contact.html" class="nav-link active">Contact</a></li>
             </ul></nav>
             <div class="flex" style="gap:1rem; align-items:center;">
@@ -31,7 +32,6 @@
                 <span class="badge">PARLONS PROJET</span>
                 <h1>Une question ?</h1>
                 <p class="lead">Un véhicule spécifique, une commande de spiritueux ou une demande de partenariat ? Notre équipe est réactive.</p>
-                
                 <div style="margin-top: 2.5rem;">
                     <div class="card mb-2" style="padding: 2rem;">
                         <h3>Nos Coordonnées</h3>
