--- a/process.html
+++ b/process.html
@@ -16,6 +16,7 @@
                 <li><a href="auto.html" class="nav-link">Pôle Auto</a></li>
                 <li><a href="spiritueux.html" class="nav-link">Spiritueux</a></li>
                 <li><a href="process.html" class="nav-link active">Process</a></li>
+                <li><a href="about.html" class="nav-link">À Propos</a></li>
                 <li><a href="contact.html" class="nav-link">Contact</a></li>
             </ul></nav>
             <div class="flex" style="gap:1rem; align-items:center;">
@@ -30,7 +31,6 @@
             <h1>Importer. Suivre. Livrer.<br><span class="text-gradient">Sans surprise.</span></h1>
             <p class="lead" style="margin: 0 auto;">Une méthodologie éprouvée en 4 étapes pour garantir votre sérénité totale.</p>
         </div>
-        
         <div class="container mt-2">
             <div class="timeline" style="max-width: 800px; margin: 0 auto; position: relative;">
                 <div style="position: absolute; left: 24px; top: 0; bottom: 0; width: 2px; background: var(--glass-border); background-color: rgba(14, 165, 233, 0.3);"></div>
