--- a/spiritueux.html
+++ b/spiritueux.html
@@ -16,6 +16,7 @@
                 <li><a href="auto.html" class="nav-link">Pôle Auto</a></li>
                 <li><a href="spiritueux.html" class="nav-link active">Spiritueux</a></li>
                 <li><a href="process.html" class="nav-link">Process</a></li>
+                <li><a href="about.html" class="nav-link">À Propos</a></li>
                 <li><a href="contact.html" class="nav-link">Contact</a></li>
             </ul></nav>
             <div class="flex" style="gap:1rem; align-items:center;">
